--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -1,18 +1,19 @@
 ---
 title: Cloud routing for supergraphs
-subtitle: Learn more about Apollo GraphOS-managed cloud routers
-description: Learn more about Apollo-managed cloud routers that sit in front of your GraphQL APIs.
+subtitle: Learn about Apollo-managed cloud routers
+description: Learn more about Apollo-managed cloud routers that route requests to your GraphQL APIs.
 ---
 
 <Note>
 
-**Cloud supergraphs are available to organizations with Apollo Serverless and Dedicated plans.** They are _not_ available to organizations with an Enterprise plan or a legacy Free or Team plan.
+**Cloud supergraphs are only available to organizations with Apollo Serverless and Dedicated plans.**
+They are _not_ available to organizations with an Enterprise plan or a legacy Free or Team plan.
 
-[See details about plans.](https://www.apollographql.com/pricing/)
+[See plan details.](https://www.apollographql.com/pricing/)
 
 </Note>
 
-When you [create a cloud supergraph](../quickstart/cloud/#2-create-your-first-supergraph) with GraphOS Studio, GraphOS automatically provisions and manages a **router** that sits in front of your GraphQL API or APIs. Clients send operations to your router's public endpoint, _instead of_ sending them directly to your API.
+When you [create a cloud supergraph](../quickstart/cloud/#2-create-your-first-supergraph) with GraphOS Studio, GraphOS automatically provisions and manages a **router** that acts as an entry point to your GraphQL APIs. In this architecture, individual GraphQL APIs are called **subgraphs**. Clients send operations to your router's public endpoint, _instead of_ sending them directly to your subgraphs.
 
 ```mermaid
 flowchart LR;
@@ -33,9 +34,9 @@ flowchart LR;
 
 ## Initializing your router
 
-Your router is provisioned _automatically_ whenever you create a cloud supergraph in Studio, or whenever you create a new [variant](../graphs/#variants) for an _existing_ cloud supergraph. Each variant has its own distinct router.
+Your router is provisioned _automatically_ whenever you [create a cloud supergraph in GraphOS Studio](../quickstart/cloud), or whenever you create a new [variant](../graphs/#variants) for an existing cloud supergraph. Each variant has its own distinct router.
 
-When you first create your variant, the router provisioning process can take a few minutes. If this process hasn't completed yet for a particular variant, an **INITIATING ENDPOINT** label is shown at the top of the variant's page in Studio:
+When you first create a variant, the router provisioning process can take a few minutes. If this process hasn't completed yet for a particular variant, an **INITIATING ENDPOINT** label is shown at the top of the variant's page in Studio:
 
 <img
   className="screenshot"
