--- a/src/content/graphos/basics/routing/index.mdx
+++ b/src/content/graphos/basics/routing/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Routing for supergraphs
 subtitle: Learn about self-hosted and cloud routing options
-description: A router acts as an entry point to your GraphQL APIs and provides a unified interface for clients to interact with. Apollo provides cloud and self-hosted options.
+description: Apollo provides cloud and self-hosted routing options. A router acts as an entry point to your GraphQL APIs and provides a unified interface for clients to interact with.
 ---
 
 With supergraph architecture (also known as [Apollo Federation](/federation/)), each component service is known as a **subgraph**. A **router** acts as an entry point to your subgraphs and provides a unified interface for clients to interact with. Clients send operations to your router's public endpoint instead of directly to your APIs.
@@ -21,7 +21,7 @@ The router intelligently executes each incoming client operation across the appr
 
 ## Router types
 
-With GraphOS, you can [host your own](./self-hosted) **Apollo Router**, a configurable, high-performance routing runtime packaged as a standalone binary:
+With GraphOS, you can [**host your own**](../quickstart/self-hosted) Apollo Router, a configurable, high-performance routing runtime packaged as a standalone binary:
 
 ```mermaid
 flowchart LR;
@@ -36,7 +36,7 @@ flowchart LR;
   class clients secondary;
 ```
 
-Or you can choose for Apollo to provision a **cloud router** for you:
+Or you can choose for Apollo to provision and manage a **cloud router** for you:
 
 ```mermaid
 flowchart LR;
@@ -55,11 +55,13 @@ flowchart LR;
   class clients secondary;
 ```
 
-The cloud router uses the same Apollo Router binary. If you use a cloud router, you can choose to run it on shared or dedicated infrastructure. Running it on dedicated infrastructure offers more configuration options. Continue reading for a detailed comparison of your router options.
+Cloud routers use the same [Apollo Router binary](https://github.com/apollographql/router) that you can self-host.
+
+If you use a cloud router, you can choose to run it on shared or dedicated infrastructure. Running it on dedicated infrastructure offers more configuration options. Continue reading for a more detailed comparison of your router options.
 
 <Note>
 
-Apollo also offers the [`@apollo/gateway`](https://www.apollographql.com/docs/federation/v1/gateway/) library, but we recommend the Apollo Router over `@apollo/gateway` because it provides significant performance improvements. For more information about differences, see the [migration guide](https://www.apollographql.com/docs/router/migrating-from-gateway/).
+Apollo also offers the [`@apollo/gateway`](/federation/v1/gateway/) library, but we recommend the Apollo Router over `@apollo/gateway` because it provides [significant performance and security improvements](https://www.apollographql.com/blog/announcement/backend/apollo-router-our-graphql-federation-runtime-in-rust/). For more information about the differences and how to migrate, see the [migration guide](/router/migrating-from-gateway/).
 
 </Note>
 
@@ -79,9 +81,7 @@ Apollo offers the following router options, in increasing order of configurabili
   <tbody>
     <tr>
       <th>Cloud shared router</th>
-      <td>
-        Apollo provisions and manages the router on shared infrastructure.
-      </td>
+      <td>Apollo provisions and manages routers on shared infrastructure.</td>
       <td>
         Basic configurability, including HTTP header rules, CORS settings, and
         subgraph error inclusion
@@ -93,12 +93,12 @@ Apollo offers the following router options, in increasing order of configurabili
     <tr>
       <th>Cloud Dedicated router</th>
       <td>
-        The router runs on dedicated, pre-provisioned infrastructure that you
-        control and scale.
+        Apollo provisions and manages routers on dedicated infrastructure that
+        you control and scale.
       </td>
       <td>
-        Highly configurable, including all options in the Serverless cloud
-        router and additional configurations
+        Highly configurable, including all options for shared cloud routers and
+        additional configurations
       </td>
       <td>
         <a href="https://apollographql.com/pricing">Dedicated</a>
@@ -108,13 +108,9 @@ Apollo offers the following router options, in increasing order of configurabili
       <th>Self-hosted router</th>
       <td>You host and manage the router on your own infrastructure.</td>
       <td>
-        Highly configurable, including all options in the Cloud Dedicated router
-        and additional{' '}
-        <a href="/router/enterprise-features">enterprise-only configurations</a>{' '}
-        and{' '}
-        <a href="/router/customizations/overview">
-          further customization options
-        </a>
+        Highly configurable and customizable, including all options for Cloud
+        Dedicated routers and additional
+        <a href="/router/customizations/overview">customization options</a>
       </td>
       <td>
         Apollo Router is available as a free and source-available runtime.
@@ -128,8 +124,8 @@ Apollo offers the following router options, in increasing order of configurabili
 Somes organizations might need to use Cloud Dedicated or self-hosted routing instead of shared cloud routing for these reasons:
 
 - **Compliance.** All of your supergraph's components must be hosted in a particular region to adhere to compliance requirements.
-- **Performance.** You need to minimize latency between your router and subgraphs by enabling them to communicate _without_ traversing the public internet (e.g., by hosting all components in a VPC).
-- **Customization.** You need to customize your router's behavior beyond what's currently possible with cloud routing
+- **Performance.** You need to minimize latency between your router and subgraphs by enabling them to communicate _without_ traversing the public internet, for example by hosting all components in a VPC.
+- **Customization.** You need to configure or customize your router's behavior beyond what's available on shared infrastructure.
 
 With the exception of Apollo-managed routing, self-hosted supergraphs benefit from all of the same GraphOS features as cloud supergraphs: metrics reporting, schema checks, the Explorer, etc.
 
@@ -141,4 +137,4 @@ For setup and configuration instructions, refer to the respective router documen
 
 - [Cloud router on shared infrastructure](./cloud)
 - [Cloud router on dedicated infrastucture](./cloud-dedicated)
-- [Self-hosted router](./self-hosted)
+- [Self-hosted router](../quick-start/self-hosted)
