Update studio name

--- a/src/content/technotes/TN0008-production-readiness-checklist.mdx
+++ b/src/content/technotes/TN0008-production-readiness-checklist.mdx
@@ -6,7 +6,7 @@ tags: [sre, router, server, client]
 
 We recommend that you read through this checklist and idenitify critical features for your team before your supergraph begins handling production traffic.
 
-## Apollo Studio
+## GraphOS Studio
 - Ensure that you've created multiple [variants](/graphos/graphs/#variants) to represent the different environments where your supergraph runs (production, staging, and so on).
 - Optionally, [protect your production variant](/graphos/graphs/studio-features#protected-variants-enterprise-only) to avoid accidental changes while working in Apollo Studio.
 
