--- a/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
+++ b/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
@@ -192,6 +192,4 @@ flowchart LR
 As a company grows, this could eliminate hundreds of updates, deployments, and dependencies due to the reduced impact of changes to backend services.
 
 ## Conclusion
-GraphQL provides a great tool to abstract away the complexities of your backing services from your front end consumers. It can 
-shield your consumers from major changes to those services while also reducing the impact of those changes across your architecture. Ultimately, It provides choice and control to your
-consumers without negatively impacting your backing services.
+GraphQL is a powerful tool for abstracting away the complexities of your backend services from front-end consumers. It can shield your consumers from major changes to those services while reducing the impact of those changes across your architecture. Ultimately, it provides choice and control to your consumers without negatively impacting your backend services.
