--- a/src/content/graphos/basics/routing/index.mdx
+++ b/src/content/graphos/basics/routing/index.mdx
@@ -21,7 +21,7 @@ The router intelligently executes each incoming client operation across the appr
 
 ## Router types
 
-With GraphOS, you can [**host your own**](../quickstart/self-hosted) Apollo Router, a configurable, high-performance routing runtime packaged as a standalone binary:
+With GraphOS, you can host your own Apollo Router, a configurable, high-performance routing runtime packaged as a standalone binary:
 
 ```mermaid
 flowchart LR;
@@ -109,7 +109,7 @@ Apollo offers the following router options, in increasing order of configurabili
       <td>You host and manage the router on your own infrastructure.</td>
       <td>
         Highly configurable and customizable, including all options for Cloud
-        Dedicated routers and additional
+        Dedicated routers and additional{' '}
         <a href="/router/customizations/overview">customization options</a>
       </td>
       <td>
@@ -137,4 +137,4 @@ For setup and configuration instructions, refer to the respective router documen
 
 - [Cloud router on shared infrastructure](./cloud)
 - [Cloud router on dedicated infrastucture](./cloud-dedicated)
-- [Self-hosted router](../quick-start/self-hosted)
+- [Self-hosted router](../quickstart/self-hosted)
