--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -74,6 +74,8 @@ A Lattice **target group** is a collection of targets, or compute resources, tha
     className="screenshot"
     alt="AWS VPC service page left menu"
     src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+    width="175px"
+    width="175px"
   />
 
 3. Click **Create target group** on the top right.
@@ -139,6 +141,7 @@ Congratulations! You've created an AWS VPC Lattice target group. Repeat this pro
     className="screenshot"
     alt="AWS VPC service page left menu"
     src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+    width="175px"
   />
 
 3. Click **Create service** in the top right.
@@ -263,6 +266,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
     className="screenshot"
     alt="AWS VPC service page left menu"
     src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+    width="175px"
   />
 
 3. Click **Create resource share** in the top right corner.
@@ -555,6 +559,7 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
     className="screenshot"
     alt="AWS VPC service page left menu"
     src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+    width="175px"
   />
 
 3. Select the resource share(s) associated with Cloud Dedicated and click the **Delete** button in the top right corner.
@@ -586,6 +591,7 @@ To remove Cloud Dedicated access to private subgraphs, you need to remove both r
     className="screenshot"
     alt="AWS VPC service page left menu"
     src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+    width="175px"
   />
 
 3. Click the name of the Lattice service you want to disconnect.
@@ -634,6 +640,7 @@ To validate that traffic is flowing to your private subgraphs, you can leverage 
     className="screenshot"
     alt="AWS VPC service page left menu"
     src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+    width="175px"
   />
 
 3. Click on the name of the Lattice service leveraged by the subgraph in question.
