Mutual link between 0043 and 0044, add link on 0043 to xolv blog post

--- a/src/content/technotes/TN0044-graphql-and-rest-together.mdx
+++ b/src/content/technotes/TN0044-graphql-and-rest-together.mdx
@@ -332,4 +332,4 @@ To use GraphQL and REST together:
 
 - ✅ Use REST for backend data services
 - ✅ Use GraphQL as a middle layer which aggregates data from your backend data services
-- ✅ Use GraphQL to abstract away the implementation details of your backend services
+- ✅ Use [GraphQL to abstract](/technotes/TN0043-using-graphql-for-abstraction/) away the implementation details of your backend services
