--- a/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
+++ b/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
@@ -4,6 +4,8 @@ id: TN0043
 tags: [architecture-patterns]
 ---
 
+import {FiExternalLink} from 'react-icons/fi';
+
 One of the advantages of using GraphQL is that it provides an abstraction between service consumers and 
 the teams maintaining the backend services. 
 
@@ -192,3 +194,8 @@ As a company grows, this could eliminate hundreds of updates, deployments, and d
 
 ## Conclusion
 GraphQL is a powerful tool for abstracting away the complexities of your backend services from front-end consumers. It can shield your consumers from major changes to those services while reducing the impact of those changes across your architecture. Ultimately, it provides choice and control to your consumers without negatively impacting your backend services.
+
+## Further Reading
+
+- [Using Graphql and REST Together](/technotes/TN0044-graphql-and-rest-together/)
+- [How to Move from BFFs to GraphQL Federation <FiExternalLink style={{display: 'inline'}} />](https://www.xolv.io/blog/articles/how-to-move-from-bffs-to-graphql-federation/)
