Remove external link icon

--- a/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
+++ b/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
@@ -4,8 +4,6 @@ id: TN0043
 tags: [architecture-patterns]
 ---
 
-import {FiExternalLink} from 'react-icons/fi';
-
 One of the advantages of using GraphQL is that it provides an abstraction between service consumers and 
 the teams maintaining the backend services. 
 
@@ -198,4 +196,4 @@ GraphQL is a powerful tool for abstracting away the complexities of your backend
 ## Further Reading
 
 - [Using Graphql and REST Together](/technotes/TN0044-graphql-and-rest-together/)
-- [How to Move from BFFs to GraphQL Federation <FiExternalLink style={{display: 'inline'}} />](https://www.xolv.io/blog/articles/how-to-move-from-bffs-to-graphql-federation/)
+- Blog Post on xolv.io: [How to Move from BFFs to GraphQL Federation](https://www.xolv.io/blog/articles/how-to-move-from-bffs-to-graphql-federation/)
