--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -546,9 +546,9 @@ Congratulations! You've now added a private subgraph to your GraphOS Cloud Route
 Once you configure an AWS VPC Lattice service to accept traffic from the Apollo AWS Organization, it is protected by multiple security layers:
 
 - The AWS VPC Lattice service network only allows traffic with a valid signature and over HTTPS.
-- The AWS VPC Lattice service's configured authorization policy ensures that traffic only comes from Apollo's AWS accounts. (This is the authorization policy you configured in step 6 [when creating your Lattice service](#step-2-create-an-aws-vpc-lattice-service).)
-- Apollo Cloud Router Provisioning compares subgraphs in a graph variant configuration against the list of known private subgraphs in its Apollo account, and refuses to create or update Cloud Routers with unknown private subgraphs.
-- Cloud Routers are only granted permissions to invoke private subgraphs that are listed in their graph variant configuration.
+- The AWS VPC Lattice service's configured authorization policy ensures traffic only comes from Apollo's AWS accounts. (This is the authorization policy you configured in step 6 [when creating your Lattice service](#step-2-create-an-aws-vpc-lattice-service).)
+- Apollo Cloud Router Provisioning compares subgraphs in a graph variant configuration against the list of known private subgraphs in its Apollo account. It refuses to create or update Cloud Routers with unknown private subgraphs.
+- Cloud Routers only have permission to invoke private subgraphs listed in their graph variant configuration.
 
 You can further restrict access to your private subgraphs by configuring additional [conditions](https://docs.aws.amazon.com/IAM/latest/UserGuide/reference_policies_elements_condition.html) in your service's authorization policy.
 Specifically, you can add conditions to restrict traffic based on your organization's Apollo account ID or your subgraph's graph ref.
@@ -560,7 +560,7 @@ To update a Lattice service's authorization policy with additional restrictions:
 1. Find your account ID and or graph ref in your Apollo account.
   - Log in to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
   - To-do: instructions on finding your account ID
-  - To find your graph ref, click on a graph variant in the **Graphs** page. The graph ref will be at the top of the page. You can click it to copy it.
+  - To find your graph ref, click on a graph variant on the **Graphs** page. The graph ref will be at the top of the page. You can click it to copy it.
   - If you are using the terraform-graphos-aws module, you must the `apollo_account_ids` and `apollo_graph_refs` variables.
 2. In the AWS Console for your region of choice, go to the VPC service page:
 
@@ -576,7 +576,7 @@ To update a Lattice service's authorization policy with additional restrictions:
     width="175px"
   />
 
-4. Click the name of the Lattice service you want to configure the authorization policy for.
+4. Click the name of the Lattice service whose authorization policy you want to configure.
 
   <img
     className="screenshot"
