--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -561,7 +561,7 @@ To update a Lattice service's authorization policy with additional restrictions:
   - Log in to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
   - To-do: instructions on finding your account ID
   - To find your graph ref, click on a graph variant on the **Graphs** page. The graph ref will be at the top of the page. You can click it to copy it.
-  - If you are using the terraform-graphos-aws module, you must the `apollo_account_ids` and `apollo_graph_refs` variables.
+  - If you are using the [Apollo Terraform module](https://github.com/apollographql/terraform-graphos-aws), you must the `apollo_account_ids` and `apollo_graph_refs` variables.
 2. In the AWS Console for your region of choice, go to the VPC service page:
 
 - [US East (N. Virginia) — us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
