Remove app links

--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -3,7 +3,7 @@ title: Supergraph Architecture Framework
 description: Learn about supergraph best practices and assess your graph's current state
 ---
 
-Whether your supergraph implementation is already underway or just starting, you can use the [Supergraph Architecture Framework](https://saf.apollographql.com/) (SAF) to learn about best practices.
+Whether your supergraph implementation is already underway or just starting, you can use the **Supergraph Architecture Framework** (SAF) to learn about best practices.
 
 ### SAF Pillars
 
@@ -19,4 +19,4 @@ SAF's principles and best practices are centered around five pillars:
 
 The SAF includes an assessment you can take to quantify your supergraph's current state and identify areas for improvement in each of these pillars.
 
-Check out the [Supergraph Architecture Framework](https://saf.apollographql.com/) to learn more.
+Ask your Apollo team or [get in touch](https://www.apollographql.com/contact-sales/) to learn more.
